# OpenSCMS

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  MINIKUBE_SETUP.md  PARAMS.md  README.md  oss-pkg-info.yaml  skaffold.yaml
.github/workflows/: openscm-rusts.yml
.gitlab-ci/: docker.yml  qa-tests.yml  skaffold-qa-tests.yml
aca/: Cargo.toml
aca/src/: core_logic.rs  core_types.rs  endpoint.rs  errors.rs  load_aca_certificates_keys.rs  main.rs  migrator.rs  persistence.rs  test_helper.rs
aca/src/core_logic/: build_certificates.rs  decrypt_eplv_pair.rs  derive_lv.rs
aca/src/entities/: aca_certificates.rs  lv_to_plv_map.rs  mod.rs  prelude.rs
aca/src/migrator/: m20240717_000001_create_table_lv_to_plv_map.rs  m20240918_000001_create_aca_certificates_table.rs  m20240918_000002_insert_aca_initial_certificates.rs  m20241024_000001_update_all_certificates_and_keys.rs  m20250221_000001_update_all_certificates_and_keys.rs  m20250820_000001_update_all_certificates_and_keys.rs  m20250919_000001_cleanup_all_certificates_and_keys.rs  setup_tables.rs
aca/src/persistence/: aca_certificates.rs  lv_to_plv_map.rs
cam/: Cargo.toml
cam/src/: endpoint.rs  main.rs
dc/: Cargo.toml
dc/src/: main.rs
deployment/: Chart.yaml  values-local.yaml  values.yaml
deployment/crds/: cluster-operator.yml
deployment/templates/: _helpers.tpl  env-config.yaml
deployment/templates/ACA/: aca.yaml
deployment/templates/CAM/: cam.yaml
deployment/templates/ECA/: eca.yaml
deployment/templates/LA/: lax.yaml
deployment/templates/RA/: ra.yaml
deployment/templates/mysql/: mysql.yaml
deployment/templates/rabbitmq/: rabbitmq.yaml
deployment/templates/secrets/: mysql.yaml  rabbitmq.yaml
deployment/templates/tools/: debugPod.yaml  pma.yaml
docker/: lgscms-ci.dockerfile
eca/: Cargo.toml
eca/src/: ee_registration_interaction.rs  enrollment_endpoint.rs  load_eca_certificates_keys.rs  main.rs  migrator.rs  persistence.rs  public_key_endpoint.rs  successor_enrollment_endpoint.rs
eca/src/entities/: eca_certificates.rs  eca_request_management.rs  mod.rs  prelude.rs
eca/src/migrator/: m20240619_000001_create_eca_certificates_table.rs  m20240619_000002_insert_eca_initial_certificates.rs  m20240625_000001_create_eca_request_management_table.rs  m20240626_000001_create_event_to_reset_request_table.rs  m20240723_000001_create_ee_canonical_pubkey_table.rs  m20240723_000002_insert_debug_canonical_entry.rs  m20240828_000001_insert_eca_signed_certificate.rs  m20241024_000001_update_all_certificates_and_keys.rs  m20241203_000001_insert_new_canonical_entry.rs  m20241227_000001_insert_more_canonical_entries.rs  m20250808_000001_drop_ee_canonical_table.rs  m20250818_000001_update_all_eca_certs_and_keys.rs  m20250919_000001_cleanup_all_eca_certs_and_keys.rs  setup_tables.rs
eca/src/persistence/: eca_certificates.rs  eca_request_management.rs
la/: Cargo.toml
la/src/: core_logic.rs  core_types.rs  endpoint.rs  errors.rs  laconfig.rs  load_la_certificates_keys.rs  main.rs  migrator.rs  persistence.rs  test_helper.rs
la/src/core_logic/: gen_linkage_seed.rs  gen_pre_linkage_values.rs  process_plv_request.rs
la/src/entities/: la_certificates.rs  mod.rs  plv_to_ls_map.rs  prelude.rs
la/src/migrator/: m20240411_000001_create_table_plv_to_ls_map.rs  m20240508_000001_include_more_fields_plv_to_ls_map.rs  m20240509_000001_rename_i_value_to_i_index.rs  m20240604_000001_alter_request_id_to_64.rs  m20240605_000001_create_event_scheduler.rs  m20250915_000001_create_la_certificates_table.rs  setup_tables.rs
la/src/persistence/: la_certificates.rs  plv_to_ls_map.rs
ma/: Cargo.toml
ma/src/: endpoint.rs  main.rs
oscms_bridge/: Cargo.toml  build.rs
oscms_bridge/src/: bridge.rs  errors.rs  lib.rs  util.rs
oscms_bridge/src/bridge/: aca_ee_cert_response.rs  cert_mgmt.rs  crl.rs  eca_ee_cert_response.rs  eca_successor_enrollment.rs  ee_eca_cert_request.rs  ee_ra_cert_request.rs  ee_ra_download_request.rs  ra_ee_cert_ack.rs  ra_ee_cert_info.rs  ra_successor_enrollment.rs
oscms_bridge/src/util/: common.rs
ra/: Cargo.toml
ra/src/: core_logic.rs  load_ra_certificates_keys.rs  main.rs  migrator.rs  persistence.rs  ra_endpoint.rs  raconfig.rs  test_helper.rs  test_util.rs
ra/src/core_logic/: cocoon_client_mapping.rs  expansion_function.rs  gen_plv_reqs.rs  gen_request_id.rs
ra/src/entities/: caterpillar.rs  ccf_store.rs  certificate_store.rs  composite_crl_store.rs  crl_store.rs  ctl_store.rs  ee_registration.rs  electors_store.rs  mod.rs  prelude.rs  ra_certificates.rs  ra_request_management.rs  sea_orm_active_enums.rs  successor_enrollment_certificate_store.rs  x_dot_info_store.rs
scmscommon/: Cargo.toml
scmscommon/src/: config.rs  core_types.rs  errors.rs  export_config.rs  gen_random_bytes.rs  lib.rs  load_certificates_keys.rs  mysql_config.rs  persistence.rs  serdes.rs  test_helper.rs  time.rs  util.rs
scripts/: cargo_unit_tests.sh  run_test_scms_manager.sh  update_cargo_index.sh
(+99 files in other folders)
