# Copyright (c) 2025 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "aca",
    "cam",
    "dc",
    "eca",
    "la",
    "ma",
    "ra",
    "scmscommon",
    "oscms_bridge",
]
resolver = "2"

[workspace.package]
description = "Open IEEE 1609.2.1 SCMS Server"
version = "1.0.0"
license-file = "LICENSE"
license = "Apache-2.0"
edition = '2024'

[profile.dev]
lto = "off"

[workspace.dependencies]
actix-web = "4"
bindgen = "0.72.1"
byteorder = "1.5.0"
celery-rs = "0.6"
derive_more = "2.0.1"
env_logger = "0.11.8"
envy = "0.4"
futures = "0.3"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.28"
once_cell = "1.21.3"
p256 = "0.13.2"
rand = "0.8"
sea-orm = { version = "^0.12.15", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
    "mock",
] }
sea-orm-migration = "^0.12.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipauto = "0.1.14"
utoipa-swagger-ui = { version = "6", features = ['actix-web'] }
validator = { version = "0.18.1", features = ["derive"] }
aes = "0.8.4"
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-retry = { version = "0.5.0" }
reqwest-middleware = { version = "0.3.3", features = ["json"] }
mockito = { version = "1.7.0" }
serde_bytes = { version = "0.11.19" }
aes-gcm = "0.10.3"
openssl = "0.10.75"
zip = "6.0.0"
base64 = "0.22.1"
regex = "1.12.2"
ecb = "0.1.2"
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2.19"
chrono = "0.4.42"
num-derive = "0.4"
cmake = "0.1.54"
port-selector = "0.1.6"
