# Copyright (c) 2025 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ma"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
utoipauto.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
once_cell.workspace = true
envy.workspace = true
sha2.workspace = true
aes.workspace = true
rand.workspace = true
aes-gcm.workspace = true
openssl.workspace = true

[dependencies.scmscommon]
path = "../scmscommon"